# global-pod-autoscaler

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  main.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: diagram.drawio
examples/: external-scaler.yaml  global-pod-autoscaler.yaml  rbac.yaml  unschedulable-pod.yaml
proto/: externalscaler.proto
src/: IsActive.ts  getMetricSpec.ts  getMetrics.ts  kubernetes.ts  streamIsActive.ts
src/common/: logger.ts  utils.ts
types/: scalerMetadata.ts
types/proto/: externalscaler.ts
types/proto/externalscaler/: ExternalScaler.ts  GetMetricSpecResponse.ts  GetMetricsRequest.ts  GetMetricsResponse.ts  IsActiveResponse.ts  MetricSpec.ts  MetricValue.ts  ScaledObjectRef.ts
